Тут то же самое, что в ветке мастер (2 задания я сделал в одной ветке)

--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body{ font-family: sans-serif; }
   transition: 0.5s;
 }
 .nav a{ flex-grow:1; /* растягиваться на всю ширину */
-  font-size: 12px; }
+  font-size: 12px;
+}
 .text__title {font-size: 14px; }
 .section {
   top: 115px;
